# rocky

./: Dockerfile  README.md  meson.build
.github/workflows/: meson_ci.yml
code/logic/: app.cpp  lifecycle.cpp  main.cpp  meson.build
code/logic/fossil/code/: app.hpp  lifecycle.hpp
code/tests/: meson.build
code/tests/cases/: test_sample.cpp
code/tests/tools/: generate-runner.py
